# aiDev-workflow

./: .gitignore  CHANGELOG.md  README.md
config/: config.example.yaml
docs/: ai-dev-skill-analysis.md  configuration.md  getting-started.md  workflow-overview.md
mcp-servers/neo4j-code-graph/: README.md  pyproject.toml
mcp-servers/neo4j-code-graph/src/: __init__.py  neo4j_client.py  server.py
mcp-servers/neo4j-code-graph/src/importers/: __init__.py  code_files.py  code_structure.py  git_history.py
scripts/: install.sh
skills/ai-dev/: SKILL.md
skills/ai-dev.analyze/: SKILL.md
skills/ai-dev.code-check/: SKILL.md
skills/ai-dev.impl/: SKILL.md
skills/ai-dev.plan/: SKILL.md
skills/ai-dev.plan-check/: SKILL.md
skills/ai-dev.pr/: SKILL.md
skills/ai-dev.pre-review/: SKILL.md
skills/ai-dev.resolve-conversation/: SKILL.md
skills/ai-dev.review/: SKILL.md
skills/ai-dev.sentinel/: SKILL.md
skills/ai-dev.spec/: SKILL.md
skills/ai-dev.work-check/: SKILL.md
