[project]
name = "neo4j-code-graph"
version = "0.1.0"
description = "Neo4j Code Graph MCP Server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
]

[project.scripts]
neo4j-code-graph = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
